# fpga-whisper

./: .gitignore  Cargo.toml  README.md  pyproject.toml
benches/: transcriber_system_profile.rs
docs/: architecture.md
fpga/: README.md
fpga/constraints/: arty_s7_50.xdc
fpga/rtl/: dot_product_i16x8.v  feature_stage_stub.v  gelu_pwl_q8_8.v  gelu_pwl_q8_8x8.v  gemm_tile_accum_i16x8.v  gemm_tile_i16x8.v  log_mel_frame.v  log_mel_q8_8.v  mel_engine_seq.v  mel_filterbank_201x80.v  uart_rx.v  uart_tx.v  whisper_top.v
fpga/scripts/: build.tcl  program.tcl  run_fpga_sim.py
fpga/tb/: dot_product_i16x8_tb.v  feature_stage_stub_tb.v  gelu_pwl_q8_8x8_tb.v  gemm_tile_batch_i16x8_tb.v  gemm_tile_i16x8_tb.v  log_mel_frame_tb.v  mel_frame_batch_tb.v
fpga/tmp/: feature_request.json  feature_response.json
python/: ct2_worker.py  export_reference_activation.py  requirements-ct2.txt
src/: __init__.py  cli.py  cli.rs  config.py  config.rs  fpga_cli.py  lib.rs  main.rs  profiling.py  profiling.rs  tui.rs  types.py  types.rs  worker.py
src/backend/: ct2_python.rs  fpga_hybrid.rs  fpga_sim.rs  mod.rs
src/backends/: __init__.py  base.py  ct2_python.py  fpga_hw.py  fpga_hybrid.py  fpga_sim.py
src/fpga/: __init__.py  layout.py  layout.rs  mod.rs  quant.py  quant.rs  sim.py  sim.rs  transport.py  transport.rs  uart.py
src/fpga/kernels/: __init__.py  dot.py  dot.rs  gelu.py  gemm.py  (+5 more)
src/model/: __init__.py  ct2.py  ct2.rs  mod.rs  reference.py  reference.rs
src/scripts/: benchmark_faster_whisper_direct.py  ct2_worker.py  export_reference_activation.py  test_fpga_uart.py
